fix scrollbar on x-axis

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -237,6 +237,7 @@ h5 {
     padding: 10px 30px 30px 30px;
     border-radius: 5px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 
 .bar {
@@ -949,7 +950,7 @@ bmiInput{
 .planner-card-hovered {
     background: #f4f4f4;
     border-style: dashed;
-
+}
 /***** Media *****/
 @media screen and (max-width: 770px){
     .tabBtn{
